가장 긴 증가하는 부분 수열 가장 큰 증가 부분 수열 해결 완료

--- a/6068 시간 관리하기/6068 시간 관리하기.vcxproj
+++ b/6068 시간 관리하기/6068 시간 관리하기.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9c0d1f4b-7645-42fe-9f00-d9715bc6fb3a}</ProjectGuid>
-    <RootNamespace>testbox</RootNamespace>
+    <ProjectGuid>{76e29954-b892-4776-bd4e-aa9e1fd95aa9}</ProjectGuid>
+    <RootNamespace>My6068시간관리하기</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="baekjoon_6068.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
