--- a/3085 사탕게임/3085 사탕게임.vcxproj.filters
+++ b/3085 사탕게임/3085 사탕게임.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp">
+    <ClCompile Include="baekjoon_3085.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
