--- a/6068 시간 관리하기/6068 시간 관리하기.vcxproj.filters
+++ b/6068 시간 관리하기/6068 시간 관리하기.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp">
+    <ClCompile Include="baekjoon_6068.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
