--- a/14888 연산자 끼워넣기/14888 연산자 끼워넣기.vcxproj
+++ b/14888 연산자 끼워넣기/14888 연산자 끼워넣기.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{94d6169d-aa75-4eec-b621-691e3fb55f1b}</ProjectGuid>
-    <RootNamespace>My3085사탕게임</RootNamespace>
+    <ProjectGuid>{c30c5ea1-1954-45ac-8060-9a479c454744}</ProjectGuid>
+    <RootNamespace>My14888연산자끼워넣기</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="baekjoon_3085.cpp" />
+    <ClCompile Include="baekjoon_14888.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
