--- a/2613 숫자구슬/2613 숫자구슬.vcxproj
+++ b/2613 숫자구슬/2613 숫자구슬.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{37590cf1-c57d-4934-abfa-9f4bd731bd90}</ProjectGuid>
-    <RootNamespace>My2591숫자카드</RootNamespace>
+    <ProjectGuid>{6721d570-d111-4058-9075-15078aba79b2}</ProjectGuid>
+    <RootNamespace>My2613숫자구슬</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="baekjoon_2591.cpp" />
+    <ClCompile Include="baekjoon_2613.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
