--- a/5582 공통 부분 문자열/5582 공통 부분 문자열.vcxproj
+++ b/5582 공통 부분 문자열/5582 공통 부분 문자열.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5b42daa2-6357-4933-b630-c736c3c31c17}</ProjectGuid>
-    <RootNamespace>My9252LCS2</RootNamespace>
+    <ProjectGuid>{385f3b9f-f89b-4467-956d-b87c1a597fa1}</ProjectGuid>
+    <RootNamespace>My5582공통부분문자열</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="baekjoon_9252.cpp" />
+    <ClCompile Include="baekjoon_5582.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
